Fixed title covered

--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -68,7 +68,7 @@ header {
     width: 100%;
     height: auto;
     display: grid;
-    grid-template-rows: 54px;
+    grid-template-rows: 1f 54px;
     grid-template-columns: 1fr 300px 1fr;
     justify-items: center;
     
